--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,7 @@
-body, html {
-  margin:0;
-  padding:0;
-  background:#ffffff;
+canvas {
+	border: 2px solid black;
+	background-color: black;
 }
-p {
-  font-family: sans-serif;
-  padding:1em;
+video {
+	display: none;
 }
